[package]
name = "picana_native"
version = "0.1.0"
authors = ["Harry K <kituyiharry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "picana"
crate-type = ["dylib"]

[dependencies]
memmap = "0.7.0"
lazy_static = "1.4.0"
libc = { version = "0.2", default-features = false }
hex = "0.2.0"
canparse =  "0.1.4"
tokio = { version = "0.2.0", features = ["full"] }
mio = { version = "0.7.0-alpha.1", features = ["default", "os-util", "os-poll"] }
#tokio-socketcan = { git = "https://github.com/marcelbuesing/tokio-socketcan.git", branch = "futures-03" }
#futures = "0.3.1"
futures-util = "0.3.1"
socketcan = { path = '../socketcan-rs' }

# Replace current nix version!(socketcan use 0.5.1 which isn't android compatible)
[replace]
"nix:0.5.1" = { path = '../nix' }
